--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <h1>Hello 👋</h1>
   <p>This site is hosted on Azure Static Web Apps.</p>
+  <p>This site is hosted on Azure Static Web Apps.</p>
 </body>
 </html>
