--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <h1>Hello 👋</h1>
   <p>This site is hosted on Azure Static Web Apps.</p>
   <p>This site is hosted on Azure Static Web Apps.</p>
+  <p>This site is hosted on Azure Static Web Apps.</p>
 </body>
 </html>
