--- a/index.html
+++ b/index.html
@@ -1,84 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Welcome</title>
-<meta name="description" content="Simple static website hosted on Azure Static Web Apps" />
-<style>
-body {
-margin: 0;
-font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-background: #f5f7fa;
-color: #333;
-}
-header {
-background: #2563eb;
-color: white;
-padding: 1.5rem;
-text-align: center;
-}
-main {
-max-width: 800px;
-margin: 2rem auto;
-padding: 1.5rem;
-background: white;
-border-radius: 8px;
-box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-}
-h1 {
-margin-top: 0;
-}
-a.button {
-display: inline-block;
-margin-top: 1rem;
-padding: 0.6rem 1rem;
-background: #2563eb;
-color: white;
-text-decoration: none;
-border-radius: 4px;
-}
-footer {
-text-align: center;
-margin: 2rem 0;
-font-size: 0.9rem;
-color: #666;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Welcome</title>
+  <meta name="description" content="Simple static website hosted on Azure Static Web Apps" />
+  <style>
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: #f5f7fa;
+      color: #333;
+    }
+    header {
+      background: #2563eb;
+      color: white;
+      padding: 1.5rem;
+      text-align: center;
+    }
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1.5rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+    h1 {
+      margin-top: 0;
+    }
+    a.button {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.6rem 1rem;
+      background: #2563eb;
+      color: white;
+      text-decoration: none;
+      border-radius: 4px;
+    }
+    footer {
+      text-align: center;
+      margin: 2rem 0;
+      font-size: 0.9rem;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
-<header>
-<h1>Your Site Is Live</h1>
-<p>Hosted with Azure Static Web Apps</p>
-</header>
+    <header>
+    <img src="NeedTravel_750px_20100131.jpg" alt="NeedTravel" style="max-width:100%; height:auto; margin-bottom:1rem;" />
+    <h1>Your Site Is Live</h1>
+    <p>Hosted with Azure Static Web Apps</p>
+  </header>
 
+  <main>
+    <h2>Welcome</h2>
+    <p>
+      This is a simple static homepage. You can edit this <strong>index.html</strong>
+      file and redeploy to update your site.
+    </p>
 
-<main>
-<h2>Welcome</h2>
-<p>
-This is a simple static homepage. You can edit this <strong>index.html</strong>
-file and redeploy to update your site.
-</p>
+    <p>
+      Common uses include:
+    </p>
+    <ul>
+      <li>Company landing page</li>
+      <li>Documentation or help page</li>
+      <li>Temporary holding page</li>
+    </ul>
 
+    <a class="button" href="https://learn.microsoft.com/azure/static-web-apps/" target="_blank">
+      Learn about Azure Static Web Apps
+    </a>
+  </main>
 
-<p>
-Common uses include:
-</p>
-<ul>
-<li>Company landing page</li>
-<li>Documentation or help page</li>
-<li>Temporary holding page</li>
-</ul>
-
-
-<a class="button" href="https://learn.microsoft.com/azure/static-web-apps/" target="_blank">
-Learn about Azure Static Web Apps
-</a>
-</main>
-
-
-<footer>
-&copy; 2026 Your Company Name
-</footer>
+  <footer>
+    &copy; 2026 Need Travel
+  </footer>
 </body>
 </html>
