--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <body>
     <header>
     <img src="NeedTravel_750px_20100131.jpg" alt="NeedTravel" style="max-width:100%; height:auto; margin-bottom:1rem;" />
-    <h1>Your Site Is Live</h1>
-    <p>Hosted with Azure Static Web Apps</p>
+    <h1>Need Travel</h1>
+    <p></p>
   </header>
 
   <main>
