--- a/index.html
+++ b/index.html
@@ -47,10 +47,15 @@
   </style>
 </head>
 <body>
-    <header>
+      <header>
     <img src="NeedTravel_750px_20100131.jpg" alt="NeedTravel" style="max-width:100%; height:auto; margin-bottom:1rem;" />
-    <h1>Need Travel</h1>
-    <p></p>
+    <h1>Your Site Is Live</h1>
+    <p>Hosted with Azure Static Web Apps</p>
+    <nav style="margin-top:1rem;">
+      <a href="index.html" style="color:#fff; margin:0 0.75rem; text-decoration:none; font-weight:500;">Home</a>
+      <a href="about.html" style="color:#fff; margin:0 0.75rem; text-decoration:none; font-weight:500;">About Us</a>
+      <a href="contact.html" style="color:#fff; margin:0 0.75rem; text-decoration:none; font-weight:500;">Contact Us</a>
+    </nav>
   </header>
 
   <main>
@@ -75,7 +80,7 @@
   </main>
 
   <footer>
-    &copy; 2026 Need Travel
+    &copy; 2026 Your Company Name
   </footer>
 </body>
 </html>
