--- a/about.html
+++ b/about.html
@@ -53,5 +53,9 @@
       Our goal is to keep things simple, fast, and accessible.
     </p>
   </main>
+
+<div id="footer"></div>
+<script src="include-footer.js"></script>
+
 </body>
 </html>
