--- a/contact.html
+++ b/contact.html
@@ -50,5 +50,9 @@
       <li>Phone: (555) 123-4567</li>
     </ul>
   </main>
+
+ <div id="footer"></div>
+ <script src="include-footer.js"></script>
+  
 </body>
 </html>
